--- a/.azure/config
+++ b/.azure/config
@@ -3,5 +3,5 @@ group = simpledigital_rg_Linux_centralus
 sku = F1
 appserviceplan = simpledigital_asp_Linux_centralus_0
 location = centralus
-web = carclinc-webapp
+web = appchecktest
 
